--- a/EUExButton/uexButton/plugin.xml
+++ b/EUExButton/uexButton/plugin.xml
@@ -2,6 +2,7 @@
 <uexplugins>
     <plugin name="uexButton">
         <method name="open"></method>
+        <method name="create" sync = "true"></method>
         <method name="close"></method>
 	</plugin>
 </uexplugins>
